tests/ixml_not_001_simple_prefix.test
START
book = !"chapter", [L]+.
INPUT
chapterchopper
OUTPUT
ixml(ixml:state = failed
     xmlns:ixml = http://invisiblexml.org/NS)
{
    info   = 'ixml:1:1: syntax error
              chapterchopper
              ^'
    line   = 1
    column = 1
    pos    = 1
}
END
